feat: fix Z80 core logic (CP/LD), implement ED ops, and repair build config
Major overhaul of the Z80 CPU core to fix critical emulation errors preventing the 48K ROM from booting.

Key changes:
- Fix critical logic bug in : The instruction now correctly updates flags based on subtraction without corrupting the F register (resolved false positive Zero Flag).
- Fix implementation of  (opcode 0x7E) which was previously failing to load data into the accumulator.
- Implement missing Extended Instructions (ED prefix): Added , correct , 16-bit SBC/ADC, and Interrupt Mode setup ().
- Fix Register & Stack handling: Enforced correct 8-bit masking and Little Endian byte order in , , , , and .
- Update : Disabled Maven resource filtering for  files to prevent binary corruption during the build process.
- Refactor Debugging: Added precise instruction logging and memory access tracing to diagnose boot loops.

This commit resolves the infinite loop at 0x11DF during the ROM memory check routine.

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,22 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <excludes>
+                    <exclude>**/*.rom</exclude> <exclude>**/*.ttf</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <includes>
+                    <include>**/*.rom</include> <include>**/*.ttf</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
